; ModuleID = '/home/carl/AnghaBench/lab/engine/code/server/extr_sv_bot.c_SV_BotInitCvars.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/server/extr_sv_bot.c_SV_BotInitCvars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"bot_enable\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"bot_developer\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"0\00", align 1
@CVAR_CHEAT = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [10 x i8] c"bot_debug\00", align 1
@.str.5 = private unnamed_addr constant [18 x i8] c"bot_maxdebugpolys\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"2\00", align 1
@.str.7 = private unnamed_addr constant [15 x i8] c"bot_groundonly\00", align 1
@.str.8 = private unnamed_addr constant [17 x i8] c"bot_reachability\00", align 1
@.str.9 = private unnamed_addr constant [22 x i8] c"bot_visualizejumppads\00", align 1
@.str.10 = private unnamed_addr constant [20 x i8] c"bot_forceclustering\00", align 1
@.str.11 = private unnamed_addr constant [22 x i8] c"bot_forcereachability\00", align 1
@.str.12 = private unnamed_addr constant [15 x i8] c"bot_forcewrite\00", align 1
@.str.13 = private unnamed_addr constant [16 x i8] c"bot_aasoptimize\00", align 1
@.str.14 = private unnamed_addr constant [21 x i8] c"bot_saveroutingcache\00", align 1
@.str.15 = private unnamed_addr constant [14 x i8] c"bot_thinktime\00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"100\00", align 1
@.str.17 = private unnamed_addr constant [21 x i8] c"bot_reloadcharacters\00", align 1
@.str.18 = private unnamed_addr constant [14 x i8] c"bot_testichat\00", align 1
@.str.19 = private unnamed_addr constant [14 x i8] c"bot_testrchat\00", align 1
@.str.20 = private unnamed_addr constant [14 x i8] c"bot_testsolid\00", align 1
@.str.21 = private unnamed_addr constant [17 x i8] c"bot_testclusters\00", align 1
@.str.22 = private unnamed_addr constant [13 x i8] c"bot_fastchat\00", align 1
@.str.23 = private unnamed_addr constant [11 x i8] c"bot_nochat\00", align 1
@.str.24 = private unnamed_addr constant [10 x i8] c"bot_pause\00", align 1
@.str.25 = private unnamed_addr constant [11 x i8] c"bot_report\00", align 1
@.str.26 = private unnamed_addr constant [12 x i8] c"bot_grapple\00", align 1
@.str.27 = private unnamed_addr constant [15 x i8] c"bot_rocketjump\00", align 1
@.str.28 = private unnamed_addr constant [14 x i8] c"bot_challenge\00", align 1
@.str.29 = private unnamed_addr constant [15 x i8] c"bot_minplayers\00", align 1
@.str.30 = private unnamed_addr constant [19 x i8] c"bot_interbreedchar\00", align 1
@.str.31 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.32 = private unnamed_addr constant [19 x i8] c"bot_interbreedbots\00", align 1
@.str.33 = private unnamed_addr constant [3 x i8] c"10\00", align 1
@.str.34 = private unnamed_addr constant [20 x i8] c"bot_interbreedcycle\00", align 1
@.str.35 = private unnamed_addr constant [3 x i8] c"20\00", align 1
@.str.36 = private unnamed_addr constant [20 x i8] c"bot_interbreedwrite\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SV_BotInitCvars() #0 {
  %1 = call i32 @Cvar_Get(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 0)
  %2 = load i32, i32* @CVAR_CHEAT, align 4
  %3 = call i32 @Cvar_Get(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %2)
  %4 = load i32, i32* @CVAR_CHEAT, align 4
  %5 = call i32 @Cvar_Get(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %4)
  %6 = call i32 @Cvar_Get(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i64 0, i64 0), i32 0)
  %7 = call i32 @Cvar_Get(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 0)
  %8 = call i32 @Cvar_Get(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %9 = load i32, i32* @CVAR_CHEAT, align 4
  %10 = call i32 @Cvar_Get(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %9)
  %11 = call i32 @Cvar_Get(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %12 = call i32 @Cvar_Get(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.11, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %13 = call i32 @Cvar_Get(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.12, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %14 = call i32 @Cvar_Get(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.13, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %15 = call i32 @Cvar_Get(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %16 = load i32, i32* @CVAR_CHEAT, align 4
  %17 = call i32 @Cvar_Get(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.15, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i64 0, i64 0), i32 %16)
  %18 = call i32 @Cvar_Get(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.17, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %19 = call i32 @Cvar_Get(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %20 = call i32 @Cvar_Get(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %21 = load i32, i32* @CVAR_CHEAT, align 4
  %22 = call i32 @Cvar_Get(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.20, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %21)
  %23 = load i32, i32* @CVAR_CHEAT, align 4
  %24 = call i32 @Cvar_Get(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.21, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %23)
  %25 = call i32 @Cvar_Get(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.22, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %26 = call i32 @Cvar_Get(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %27 = load i32, i32* @CVAR_CHEAT, align 4
  %28 = call i32 @Cvar_Get(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.24, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %27)
  %29 = load i32, i32* @CVAR_CHEAT, align 4
  %30 = call i32 @Cvar_Get(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.25, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %29)
  %31 = call i32 @Cvar_Get(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.26, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %32 = call i32 @Cvar_Get(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.27, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 0)
  %33 = call i32 @Cvar_Get(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.28, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %34 = call i32 @Cvar_Get(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.29, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 0)
  %35 = load i32, i32* @CVAR_CHEAT, align 4
  %36 = call i32 @Cvar_Get(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.30, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.31, i64 0, i64 0), i32 %35)
  %37 = load i32, i32* @CVAR_CHEAT, align 4
  %38 = call i32 @Cvar_Get(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.32, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.33, i64 0, i64 0), i32 %37)
  %39 = load i32, i32* @CVAR_CHEAT, align 4
  %40 = call i32 @Cvar_Get(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.34, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.35, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* @CVAR_CHEAT, align 4
  %42 = call i32 @Cvar_Get(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.36, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.31, i64 0, i64 0), i32 %41)
  ret void
}

declare dso_local i32 @Cvar_Get(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
